<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>artuto</groupId>
    <artifactId>Endless</artifactId>
    <version>1.4.0</version>
    <packaging>jar</packaging>
    <build>
     <plugins>
      <plugin>
        <artifactId>maven-shade-plugin</artifactId>
        <version>3.0.0</version>
        <executions>
          <execution>
            <id>shade</id>
            <goals>
              <goal>shade</goal>
            </goals>
            <phase>package</phase>
          </execution>
        </executions>
        <configuration>
          <transformers>
            <transformer
              implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
              <mainClass>me.artuto.endless.Endless</mainClass>
            </transformer>
          </transformers>
        </configuration>
      </plugin>
     </plugins>
   </build>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
    </properties>
    <repositories>
     <repository>
        <id>central</id>
        <name>bintray</name>
        <url>http://jcenter.bintray.com</url>
     </repository>
    </repositories>
    <dependencies>
     <dependency>
        <groupId>net.dv8tion</groupId>
        <artifactId>JDA</artifactId>
        <version>LATEST</version>
        <scope>compile</scope>
     </dependency>
     <dependency>
        <groupId>com.jagrosh</groupId>
        <artifactId>JDA-Utilities</artifactId>
        <version>LATEST</version>
        <scope>compile</scope>
     </dependency>
     <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-lang3</artifactId>
        <version>3.6</version>
        <scope>compile</scope>
     </dependency>
     <dependency>
         <groupId>com.google.apis</groupId>
         <artifactId>google-api-services-translate</artifactId>
         <version>LATEST</version>
         <scope>compile</scope>
     </dependency>
    </dependencies>
</project>
